Fix Shrikhand font kerning issue - improve letter spacing for 'de' combinations

--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -14,6 +14,11 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Shrikhand', cursive;
   font-weight: 400;
   line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-rendering: optimizeLegibility;
+  font-feature-settings: "kern" 1;
+  -webkit-font-feature-settings: "kern" 1;
+  font-kerning: normal;
 }
 
 * {
